syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.milkingParlourService";
option java_outer_classname = "MilkingParlourServiceImpl";


package milkingParlourService;

service MilkingParlourService {

  rpc SetMachineDetails(stream MachineDetail) returns (SetMachineDetailsReply) {}

  rpc GetMachineIds(Empty) returns (stream MachineId) {}

  rpc GetMilkReports(stream MachineReportDate) returns (stream MilkReport) {}

  rpc GetMilkVolume(MachineTimeSpan) returns (MilkQuantity) {}

}

message MachineId {
  int32 id = 1;
}

message MachineDetail {
  MachineId machineID = 1;
  string dateInstalled = 2;
  string dateNextService = 3;
}

message SetMachineDetailsReply {
  string setMachineDetailsReply = 1;
}

message MachineTimeSpan {
  string startDate = 1;
  string endDate = 2;
  MachineId machineID = 3;
}

message MilkQuantity {
  float volumeLitres = 1;
}


message MachineReportDate {
  string reportDate = 1;
  MachineId machineID = 2;
}


message MilkReport {
  string reportDate = 1;
  float volumeLitres = 2;
  float heatedTemperature = 3;
  float heatedDuration = 4;
  float chilledTemperature = 5;
  string dateNextService = 6;
  int32 machId = 7;

}

message Empty{
}
